--- a/Web/Views/Idea/EditGeneral.cshtml
+++ b/Web/Views/Idea/EditGeneral.cshtml
@@ -305,10 +305,10 @@
                             <span class="t-lg t-bold clr-white">@Model.Idea.Name</span>
                         </div>
                         <div class="col-12 d-flex flex-wrap">
-                            @foreach (var react in Model.Idea.Reactions)
+                            @foreach (var react in Model.Idea.AllReactionsByType)
                             {
                                 <div class="aside_reaction col-6">
-                                    @react.Value
+                                    @react.Name
                                     <span>@react.Count</span>
                                 </div>
                             }
@@ -357,7 +357,7 @@
                         </div>
                         <div class="mt-2 col-12">
                             <section>
-                                <div class="pt-1 custom-scroll" id="memberWindowLoad">
+                                <div class="pt-1 custom-scroll" style="overflow-y:scroll;overflow-x:hidden;" id="memberWindowLoad">
                                     @if (Model.Idea.Members.Count <= 0)
                                     {
                                         <div class='h-100 d-flex justify-content-center align-items-center text-center'>
@@ -388,6 +388,7 @@
                             {
                                 <section>
                                     <div class="d-none pt-1 custom-scroll"
+                                          style="overflow-y:scroll;overflow-x:hidden;"
                                          id="memberRequestsWindowLoad">
                                         @if (Model.Idea.MemberRequests.Count <= 0)
                                         {
@@ -856,7 +857,7 @@ else
                                 <form class="">
                                     <div class="pt-sm-3 pt-lg-5 d-flex">
                                         @{
-                                            if (Model.Idea.IsReacted)
+                                            if (Model.Idea.Reactions.Any(x => x.IsActive))
                                             {
                                                 @foreach (var react in Model.Idea.Reactions)
                                                 {
@@ -867,7 +868,6 @@ else
                                                             <button disabled
                                                                     class="async-reaction-btn position-absolute me-2 btn_reaction">
                                                                 @react.Value
-                                                                <span>@react.Count</span>
                                                             </button>
                                                         </div>
                                                     }
@@ -876,9 +876,8 @@ else
                                                         <div style="height: 58px;"
                                                              class="reaction-wrap position-relative react-wrap-noactive">
                                                             <button disabled
-                                                                    class="async-reaction-btn position-absolute me-2 btn_reaction">
+                                                                    class="bubbly-button async-reaction-btn position-absolute me-2 btn_reaction">
                                                                 @react.Value
-                                                                <span>@react.Count</span>
                                                             </button>
                                                         </div>
                                                     }
@@ -895,12 +894,11 @@ else
                                                          class="reaction-wrap position-relative">
                                                         <button data-idea="@Model.Idea.Guid"
                                                                 data-react="@react.Guid"
-                                                                class="async-reaction-btn position-absolute me-2 btn_reaction">
+                                                                class="bubbly-button async-reaction-btn position-absolute me-2 btn_reaction">
                                                             @react.Value
-                                                            <span>@react.Count</span>
                                                         </button>
                                                     </div>
-                                                    leftPadding = leftPadding + 76;
+                                                    leftPadding = leftPadding + 44;
                                                 }
                                             }
                                         }
