--- a/Web/Views/Idea/EditModders.cshtml
+++ b/Web/Views/Idea/EditModders.cshtml
@@ -305,10 +305,10 @@
                             <span class="t-lg t-bold clr-white">@Model.Idea.Name</span>
                         </div>
                         <div class="col-12 d-flex flex-wrap">
-                            @foreach (var react in Model.Idea.Reactions)
+                            @foreach (var react in Model.Idea.AllReactionsByType)
                             {
                                 <div class="aside_reaction col-6">
-                                    @react.Value
+                                    @react.Name
                                     <span>@react.Count</span>
                                 </div>
                             }
@@ -856,7 +856,7 @@ else
                                 <form class="">
                                     <div class="pt-sm-3 pt-lg-5 d-flex">
                                         @{
-                                            if (Model.Idea.IsReacted)
+                                            if (Model.Idea.Reactions.Any(x => x.IsActive))
                                             {
                                                 @foreach (var react in Model.Idea.Reactions)
                                                 {
@@ -867,7 +867,6 @@ else
                                                             <button disabled
                                                                     class="async-reaction-btn position-absolute me-2 btn_reaction">
                                                                 @react.Value
-                                                                <span>@react.Count</span>
                                                             </button>
                                                         </div>
                                                     }
@@ -876,9 +875,8 @@ else
                                                         <div style="height: 58px;"
                                                              class="reaction-wrap position-relative react-wrap-noactive">
                                                             <button disabled
-                                                                    class="async-reaction-btn position-absolute me-2 btn_reaction">
+                                                                    class="bubbly-button async-reaction-btn position-absolute me-2 btn_reaction">
                                                                 @react.Value
-                                                                <span>@react.Count</span>
                                                             </button>
                                                         </div>
                                                     }
@@ -895,12 +893,11 @@ else
                                                          class="reaction-wrap position-relative">
                                                         <button data-idea="@Model.Idea.Guid"
                                                                 data-react="@react.Guid"
-                                                                class="async-reaction-btn position-absolute me-2 btn_reaction">
+                                                                class="bubbly-button async-reaction-btn position-absolute me-2 btn_reaction">
                                                             @react.Value
-                                                            <span>@react.Count</span>
                                                         </button>
                                                     </div>
-                                                    leftPadding = leftPadding + 76;
+                                                    leftPadding = leftPadding + 44;
                                                 }
                                             }
                                         }
