--- a/Web/Views/User/EditGeneral.cshtml
+++ b/Web/Views/User/EditGeneral.cshtml
@@ -231,8 +231,8 @@
                                 <input disabled type="text"
                                        class="form-upd form-control"
                                        id="floatingInput"
-                                       placeholder="Поиск по имени" />
-                                <label class="text-dark" for="floatingInput">Поиск по имени</label>
+                                       placeholder="Поиск (В обновлении)" />
+                                <label class="text-dark" for="floatingInput">Поиск (В обновлении)</label>
                             </div>
                             <button disabled class="clr-mute btn bg-transparent">
                                 <svg xmlns="http://www.w3.org/2000/svg"
@@ -250,10 +250,13 @@
                                     class="clr-mute btn-full-link btn-unfocus btn bg-transparent btn-link-active">
                                 Друзья
                             </button>
-                            <button id="toFriendRequestsWindowBtn"
-                                    class="clr-mute btn-full-link btn-unfocus btn bg-transparent">
-                                Заявки
-                            </button>
+                            @if (Model.IsSelfProfile)
+                            {
+                                <button id="toFriendRequestsWindowBtn"
+                                        class="clr-mute btn-full-link btn-unfocus btn bg-transparent">
+                                    Заявки
+                                </button>
+                            }
                         </div>
                         <div class="mt-2 col-12">
                             <section>
@@ -266,17 +269,20 @@
                                     </div>
                                 </div>
                             </section>
-                            <section>
-                                <div class="d-none pt-1 custom-scroll"
-                                     id="friendRequestsWindowLoad">
-                                    <div id="friendRequestsWindowLoadPrev"
-                                         class="d-none d-flex justify-content-center h-100 align-items-center">
-                                        <div class="pt-4 spinner-border clr-mute" role="status">
-                                            <span class="sr-only"></span>
+                            @if (Model.IsSelfProfile)
+                            {
+                                <section>
+                                    <div class="d-none pt-1 custom-scroll"
+                                         id="friendRequestsWindowLoad">
+                                        <div id="friendRequestsWindowLoadPrev"
+                                             class="d-none d-flex justify-content-center h-100 align-items-center">
+                                            <div class="pt-4 spinner-border clr-mute" role="status">
+                                                <span class="sr-only"></span>
+                                            </div>
                                         </div>
                                     </div>
-                                </div>
-                            </section>
+                                </section>
+                            }
                         </div>
                     </div>
                 </div>
