--- a/Web/Views/Authorize/Index.cshtml
+++ b/Web/Views/Authorize/Index.cshtml
@@ -1,7 +1,14 @@
 ﻿
 @{
-    ViewData["Title"] = "Привет, путешественник";
+    ViewData["Title"] = "Найти участников, Обсудить новинки";
     Layout = "_Layout";
+}
+
+@section Metatags
+{    
+    <meta name="robots" content="all" />
+    <meta name="keywords" content="найти идеи реализовать проекты поиск участников" />
+    <meta name="description" content="Roundile - это место для твоих идей, создавай топики и цели, обсуждай задачи, приглашай участников и взаимодействуй с другими" />
 }
 
 <div class="d-none position-fixed top-0" id="hideBackgroundWrapper">
