--- a/Web/Views/Home/Index.cshtml
+++ b/Web/Views/Home/Index.cshtml
@@ -1,13 +1,21 @@
 ﻿@model HomeIdeasViewModel;
 @using ApplicationCore.DTOs;
 
-@{
-    ViewData["Title"] = "Главная";
+@{    
+    ViewData["Title"] = "Новые идеи, Реализовать проект";
 }
 
 @{
     string avatar = @User.Claims.Where(x => x.Type.Equals("UserAvatarName")).Select(x => x.Value).SingleOrDefault();
     string userName = @User.Claims.Where(x => x.Type.Equals("UserName")).Select(x => x.Value).SingleOrDefault();
+}
+
+@section Metatags
+{
+    <link rel="canonical" href="/home" />
+    <meta name="robots" content="all" />
+    <meta name="keywords" content="найти идеи поиск команды новинки обсуждения" />
+    <meta name="description" content="Roundile - это место для твоих идей, создавай топики и цели, обсуждай задачи, приглашай участников и взаимодействуй с другими" />
 }
 
 
@@ -436,13 +444,13 @@
                             aria-labelledby="dropdownMenuLink">
                             <h6 class="dropdown-header t-sm t-med">Найти по тегам</h6>
                             <div class="p-2 pt-0 col-12 d-flex flex-wrap">
-                                @foreach(var tag in Model.Tags)
+                                @foreach (var tag in Model.Tags)
                                 {
-                                <a asp-route-tag="@tag.Guid" asp-action="index" asp-controller="home" class="btn-tag">
-                                    @tag.Name
-                                </a>
+                                    <a asp-route-tag="@tag.Guid" asp-action="index" asp-controller="home" class="btn-tag">
+                                        @tag.Name
+                                    </a>
                                 }
-                            </div>                            
+                            </div>
                             <li>
                                 <a asp-controller="home" asp-action="index" class="search-dropdown dropdown-item" asp-route-key="popular">Популярные</a>
                             </li>
@@ -465,7 +473,7 @@
                 <ul style="align-items: center;"
                     class="navbar-nav ms-auto mb-2 mb-lg-0 pe-4">
                     <li class="nav-item">
-                        <a class="nav-link-pad nav-link" disabled  asp-controller="home">
+                        <a class="nav-link-pad nav-link" disabled asp-controller="home">
                             <svg xmlns="http://www.w3.org/2000/svg"
                                  width="22"
                                  height="22"
@@ -544,7 +552,7 @@ else
 
     <nav style="height:75px!important;" class="bg-primary present_nav_wrapper container-fluid d-flex justify-content-center">
         <div class="present_nav d-flex position-fixed align-items-center justify-content-center"
-         style="
+             style="
           z-index: 10;
           height: 75px;
           top: 0 !important;
@@ -559,48 +567,48 @@ else
                 </div>
             </a>
 
-        <div class="ms-auto d-flex">
-            <a class="t-nav-link me-3" href="/home">
-                <svg xmlns="http://www.w3.org/2000/svg"
-                     width="26"
-                     height="26"
-                     fill="currentColor"
-                     class="clr-white bi bi-house"
-                     viewBox="0 0 16 16">
-                    <path fill-rule="evenodd"
-                          d="M2 13.5V7h1v6.5a.5.5 0 0 0 .5.5h9a.5.5 0 0 0 .5-.5V7h1v6.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5zm11-11V6l-2-2V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5z" />
-                    <path fill-rule="evenodd"
-                          d="M7.293 1.5a1 1 0 0 1 1.414 0l6.647 6.646a.5.5 0 0 1-.708.708L8 2.207 1.354 8.854a.5.5 0 1 1-.708-.708L7.293 1.5z" />
-                </svg>
-            </a>
-            <a class="me-3 t-nav-link" href="/find">
-                <svg xmlns="http://www.w3.org/2000/svg"
-                     width="26"
-                     height="26"
-                     fill="currentColor"
-                     class="bi bi-people"
-                     viewBox="0 0 16 16">
-                    <path d="M15 14s1 0 1-1-1-4-5-4-5 3-5 4 1 1 1 1h8zm-7.978-1A.261.261 0 0 1 7 12.996c.001-.264.167-1.03.76-1.72C8.312 10.629 9.282 10 11 10c1.717 0 2.687.63 3.24 1.276.593.69.758 1.457.76 1.72l-.008.002a.274.274 0 0 1-.014.002H7.022zM11 7a2 2 0 1 0 0-4 2 2 0 0 0 0 4zm3-2a3 3 0 1 1-6 0 3 3 0 0 1 6 0zM6.936 9.28a5.88 5.88 0 0 0-1.23-.247A7.35 7.35 0 0 0 5 9c-4 0-5 3-5 4 0 .667.333 1 1 1h4.216A2.238 2.238 0 0 1 5 13c0-1.01.377-2.042 1.09-2.904.243-.294.526-.569.846-.816zM4.92 10A5.493 5.493 0 0 0 4 13H1c0-.26.164-1.03.76-1.724.545-.636 1.492-1.256 3.16-1.275zM1.5 5.5a3 3 0 1 1 6 0 3 3 0 0 1-6 0zm3-2a2 2 0 1 0 0 4 2 2 0 0 0 0-4z" />
-                </svg>
-            </a>
-            <a class="me-3 t-nav-link" href="/about">
-                <svg xmlns="http://www.w3.org/2000/svg"
-                     width="23"
-                     height="23"
-                     fill="currentColor"
-                     class="bi bi-info-circle"
-                     viewBox="0 0 16 16">
-                    <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z" />
-                    <path d="m8.93 6.588-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 6.588zM9 4.5a1 1 0 1 1-2 0 1 1 0 0 1 2 0z" />
-                </svg>
-            </a>
+            <div class="ms-auto d-flex">
+                <a class="t-nav-link me-3" href="/home">
+                    <svg xmlns="http://www.w3.org/2000/svg"
+                         width="26"
+                         height="26"
+                         fill="currentColor"
+                         class="clr-white bi bi-house"
+                         viewBox="0 0 16 16">
+                        <path fill-rule="evenodd"
+                              d="M2 13.5V7h1v6.5a.5.5 0 0 0 .5.5h9a.5.5 0 0 0 .5-.5V7h1v6.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5zm11-11V6l-2-2V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5z" />
+                        <path fill-rule="evenodd"
+                              d="M7.293 1.5a1 1 0 0 1 1.414 0l6.647 6.646a.5.5 0 0 1-.708.708L8 2.207 1.354 8.854a.5.5 0 1 1-.708-.708L7.293 1.5z" />
+                    </svg>
+                </a>
+                <a class="me-3 t-nav-link" href="/find">
+                    <svg xmlns="http://www.w3.org/2000/svg"
+                         width="26"
+                         height="26"
+                         fill="currentColor"
+                         class="bi bi-people"
+                         viewBox="0 0 16 16">
+                        <path d="M15 14s1 0 1-1-1-4-5-4-5 3-5 4 1 1 1 1h8zm-7.978-1A.261.261 0 0 1 7 12.996c.001-.264.167-1.03.76-1.72C8.312 10.629 9.282 10 11 10c1.717 0 2.687.63 3.24 1.276.593.69.758 1.457.76 1.72l-.008.002a.274.274 0 0 1-.014.002H7.022zM11 7a2 2 0 1 0 0-4 2 2 0 0 0 0 4zm3-2a3 3 0 1 1-6 0 3 3 0 0 1 6 0zM6.936 9.28a5.88 5.88 0 0 0-1.23-.247A7.35 7.35 0 0 0 5 9c-4 0-5 3-5 4 0 .667.333 1 1 1h4.216A2.238 2.238 0 0 1 5 13c0-1.01.377-2.042 1.09-2.904.243-.294.526-.569.846-.816zM4.92 10A5.493 5.493 0 0 0 4 13H1c0-.26.164-1.03.76-1.724.545-.636 1.492-1.256 3.16-1.275zM1.5 5.5a3 3 0 1 1 6 0 3 3 0 0 1-6 0zm3-2a2 2 0 1 0 0 4 2 2 0 0 0 0-4z" />
+                    </svg>
+                </a>
+                <a class="me-3 t-nav-link" href="/about">
+                    <svg xmlns="http://www.w3.org/2000/svg"
+                         width="23"
+                         height="23"
+                         fill="currentColor"
+                         class="bi bi-info-circle"
+                         viewBox="0 0 16 16">
+                        <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z" />
+                        <path d="m8.93 6.588-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 6.588zM9 4.5a1 1 0 1 1-2 0 1 1 0 0 1 2 0z" />
+                    </svg>
+                </a>
+            </div>
+            <div class="ps-2 ps-md-4">
+                <button class="bg-black present_btn async-open-login icon-link-btn">
+                    Присоединиться
+                </button>
+            </div>
         </div>
-        <div class="ps-2 ps-md-4">
-            <button class="bg-black present_btn async-open-login icon-link-btn">
-                Присоединиться
-            </button>
-        </div>
-    </div>
     </nav>
 }
 
@@ -663,7 +671,7 @@ else
                                                                              class="reaction-wrap position-relative react-wrap-active">
                                                                             <button disabled
                                                                                     class="async-reaction-btn position-absolute me-2 btn_reaction">
-                                                                                @react.Value                                                                                
+                                                                                @react.Value
                                                                             </button>
                                                                         </div>
                                                                     }
@@ -673,7 +681,7 @@ else
                                                                              class="reaction-wrap position-relative react-wrap-noactive">
                                                                             <button disabled
                                                                                     class="async-reaction-btn position-absolute me-2 btn_reaction">
-                                                                                @react.Value                                                                                
+                                                                                @react.Value
                                                                             </button>
                                                                         </div>
                                                                     }
@@ -689,24 +697,24 @@ else
 
                                                                     if (Model.IsAuthorized)
                                                                     {
-                                                                    <div style="@styleLine"
-                                                                         class="reaction-wrap position-relative">
-                                                                        <button data-idea="@idea.Guid"
-                                                                                data-react="@react.Guid"
-                                                                                class="bubbly-button async-reaction-btn position-absolute me-2 btn_reaction">
-                                                                            @react.Value
-                                                                        </button>
-                                                                    </div>
+                                                                        <div style="@styleLine"
+                                                                             class="reaction-wrap position-relative">
+                                                                            <button data-idea="@idea.Guid"
+                                                                                    data-react="@react.Guid"
+                                                                                    class="bubbly-button async-reaction-btn position-absolute me-2 btn_reaction">
+                                                                                @react.Value
+                                                                            </button>
+                                                                        </div>
                                                                     }
                                                                     else
-                                                                    { 
-                                                                    <div style="@styleLine"
-                                                                         class="reaction-wrap position-relative">
-                                                                        <button disabled                                                                                
-                                                                                class="async-reaction-btn position-absolute me-2 btn_reaction">
-                                                                            @react.Value
-                                                                        </button>
-                                                                    </div>
+                                                                    {
+                                                                        <div style="@styleLine"
+                                                                             class="reaction-wrap position-relative">
+                                                                            <button disabled
+                                                                                    class="async-reaction-btn position-absolute me-2 btn_reaction">
+                                                                                @react.Value
+                                                                            </button>
+                                                                        </div>
                                                                     }
 
                                                                     leftPadding = leftPadding + 44;
@@ -792,7 +800,7 @@ else
                                         }
                                         else
                                         {
-                                            <a asp-action="index"  asp-route-search="@Model.Search" asp-route-key="@Model.SearchKey" asp-route-tag="@Model.SearchTag" asp-route-react="@Model.SortReact" asp-route-page="@pageInfo.NumberValue" class="me-1 btn btn-page">
+                                            <a asp-action="index" asp-route-search="@Model.Search" asp-route-key="@Model.SearchKey" asp-route-tag="@Model.SearchTag" asp-route-react="@Model.SortReact" asp-route-page="@pageInfo.NumberValue" class="me-1 btn btn-page">
                                                 @pageInfo.NumberValue
                                             </a>
                                         }
@@ -831,7 +839,7 @@ else
                                         }
                                         else
                                         {
-                                            <a asp-action="@news.IdeaGuid" asp-controller="idea">                                                
+                                            <a asp-action="@news.IdeaGuid" asp-controller="idea">
                                                 <label class="cursor-point t-med t-sm clr-mute">@news.Content<span class="ps-1 clr-blue t-smbold">@news.IdeaName</span></label>
                                             </a>
                                         }
