--- a/Web/Views/Shared/_Layout.cshtml
+++ b/Web/Views/Shared/_Layout.cshtml
@@ -5,6 +5,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+    @await RenderSectionAsync("Metatags", required: false)
+
+
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="~/css/style.css" />
     <link rel="stylesheet" href="~/css/adaptive.css" />
@@ -18,30 +21,12 @@
     <link rel="stylesheet" href="~/css/updated.css" />
     <link rel="stylesheet" href="~/css/present.css" />
 
-    <!-- Bootstrap CSS
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    />
-
-    <!--jQUERY
-    <script
-      src="https://code.jquery.com/jquery-3.6.0.min.js"
-      integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
-      crossorigin="anonymous"
-    ></script>
-    -->
-
-
-
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700;800;900&display=swap"
           rel="stylesheet" />
 
-    <title>@ViewData["Title"] • Roundile</title>
+    <title>@ViewData["Title"] — Идеи на Roundile </title>
 </head>
 <body class="bg-darkc text-white">
 
@@ -57,11 +42,11 @@
                 </label>
             </div>
             <div class="pt-2 d-flex justify-content-center flex-wrap">
-                <a asp-route-section="ideas" asp-controller="about" class="text-muted t-med t-microsm pe-3">Об идеях</a>
-                <a asp-route-section="communication" asp-controller="about" class="text-muted t-med t-microsm pe-3">Коммуникация</a>
-                <a asp-route-section="contacts" asp-controller="about" class="text-muted  t-med t-microsm pe-3">Контакты</a>
-                <a asp-route-section="us" asp-controller="about" class="text-muted t-med t-microsm pe-3">О нас</a>
-                <a asp-route-section="donate" asp-controller="about" class="text-muted t-med t-microsm pe-3">Поддержать</a>
+                <a asp-route-section="ideas" asp-action="index" asp-controller="about" class="text-muted t-med t-microsm pe-3">Об идеях</a>
+                <a asp-route-section="communication" asp-action="index" asp-controller="about" class="text-muted t-med t-microsm pe-3">Коммуникация</a>
+                <a asp-route-section="contacts" asp-action="index" asp-controller="about" class="text-muted  t-med t-microsm pe-3">Контакты</a>
+                <a asp-route-section="us" asp-action="index" asp-controller="about" class="text-muted t-med t-microsm pe-3">О нас</a>
+                <!--<a asp-route-section="donate" asp-controller="about" class="text-muted t-med t-microsm pe-3">Поддержать</a>-->
             </div>
         </div>
     </footer>
